--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   "dependencies": {
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@types/node": "^12.7.5",
+    "eslint": "^6.3.0",
+    "ts-node-dev": "^1.0.0-pre.42",
+    "typescript": "^3.6.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
