--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.5",
+    "@typescript-eslint/parser": "^2.2.0",
     "eslint": "^6.3.0",
     "ts-node-dev": "^1.0.0-pre.42",
     "typescript": "^3.6.3"
   },
+  "main": "dist/index.js",
   "scripts": {
+    "lint": "eslint .",
+    "build": "tsc",
+    "start": "node .",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
+    "prod": "tsc && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
