Update eslint config to ignore express 'next' no-unsued-var error

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
   "rules": {
     "arrow-body-style": "off",
     "comma-dangle": ["error", "never"],
-    "max-len": ["error", { "code": 150 }]
+    "max-len": ["error", { "code": 150 }],
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
   },
   "globals": {
       "it": false,
