--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
     "test": "test"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/express-formidable": "^1.0.4",
     "@types/node": "^12.7.5",
+    "@types/pug": "^2.0.4",
     "@typescript-eslint/parser": "^2.2.0",
     "eslint": "^6.3.0",
     "ts-node-dev": "^1.0.0-pre.42",
     "typescript": "^3.6.3"
   },
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "scripts": {
     "lint": "eslint .",
     "build": "tsc",
     "start": "node .",
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "prod": "tsc && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
